[package]
name = "dns_strolch"
version = "0.1.1"
authors = ["batram <ym@batr.am>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = ""
rustls = ""
webpki = ""
webpki-roots = ""
dns-parser = ""
byteorder = "1.3.4"
state = { version = "0.2" }
state_list = { git = "https://github.com/batram/state_list", version = "0.1.1"}
ctrlc = "3.1.4"
tld = "2.10.0"
seahash = ""
log = { version = "0.4" }
simple-logging = "2.0.2"

[target.'cfg(target_os = "windows")'.dependencies]
toast_notifications = { git = "https://github.com/batram/toast_notifications" }
windows-service = ""

[lib]
name = "dns_strolch"
path = "src/lib.rs"

[[bin]]
name = "dnsstrolch_cli"
path = "src/main.rs"
